fix project generator
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>